--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <title>Pixel Art Maker!</title>
-    <script src="jquery-3.3.1.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton">
     <link rel="stylesheet" href="styles.css">
@@ -20,7 +19,7 @@
             <input type="number" id="inputHeight" name="height" min="1" value="1"> Grid Width:
             <input type="number" id="inputWidth" name="width" min="1" value="1">
             <input type="submit" id="submit">
-            <button type="button" id="clear">Clear Grid</button>
+            <input type="reset" id="clear"></input>
         </form>
 
         <h2>Pick A Color</h2>
